Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15000

Text in labels and buttons is completely broken in .net apps

    XMLWordPrintable

Details

    Description

      Steps to reproduce:

      1. Install .NET Framework 2.0 or 2.0 SP2 from rapps
      2. Reboot the system
      3. Start example (Windows Forms -  How-To Validating Textboxes) app
      4. Click the button on form

      All button's text and labels are broken, but text in textarea is fine

      Tested with 653a9be05bebd56ab50baedfe4b7f0e2c2a0e650

      Attachments

        1. dotnet_ros.PNG
          11 kB
          extravert34
        2. dotnet_win.png
          12 kB
          extravert34
        3. photo_2018-11-18_22-40-04.jpg
          30 kB
          Getequ
        4. rosbug.PNG
          339 kB
          Dz3n
        5. rosbug2.PNG
          49 kB
          Dz3n
        6. 0.4.12 - itunes.PNG
          229 kB
          Jedi-to-be
        7. VirtualBox_ReactOSn_16_01_2019_14_10_05.png
          90 kB
          Jedi-to-be
        8. ApiMonitorLogWin2k3.txt
          167 kB
          Katayama Hirofumi MZ
        9. 0.4.11-RC-29-g97ab52a__affected.png
          27 kB
          reactosfanboy
        10. r73441_affected.png
          31 kB
          reactosfanboy
        11. r76032_affected.png
          26 kB
          reactosfanboy
        12. gdiplus-log.txt
          198 kB
          Katayama Hirofumi MZ
        13. GdipCreateHalftonePalette.patch
          0.7 kB
          Katayama Hirofumi MZ
        14. Screenshot from 2019-01-25 15.45.57.png
          25 kB
          extravert34
        15. not-fixed-yet.png
          28 kB
          Katayama Hirofumi MZ
        16. freetype.patch
          0.5 kB
          I_Kill_Bugs
        17. fixed.png
          63 kB
          I_Kill_Bugs
        18. VirtualBox_ReactOS2021_14_03_2019_22_30_53.png
          195 kB
          Jedi-to-be
        19. VirtualBox_ReactOS2021_14_03_2019_22_58_09.png
          91 kB
          Jedi-to-be

        Issue Links

          Activity

            People

              hbelusca hbelusca
              extravert34 extravert34
              Votes:
              9 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: