[WIN32SS:NTGDI] Fix missing text in labels and buttons for .NET apps. CORE-15000

There was a missing break statement in ftGdiGetGlyphOutline().
Found by JIRA contributor 'I_Kill_Bugs' :-)

Add also brackets around 'case's to make code navigation easier.